--- a/public/themes/milku.css
+++ b/public/themes/milku.css
@@ -13,8 +13,9 @@
     --brand-color-50: #FEF8E8FF;
 
     /* Custom Colors */
-    --button-text-primary: var(--grey-500);
-    --button-stroke-primary: var(--grey-500);
+    --button--text-primary: var(--grey-500);
+    --button--stroke-primary: var(--grey-500);
+    --button--stroke-neutral: var(--grey-500);
 
     /* System Colors */
 
